wordclass can now be modified with morpho api; added comment field to paradigm; changed http methods for api services